# Genetic_algorithm-school_work

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  chromosome_array.h  chromosome_array.tpp  exporter.cpp  exporter.h  fitness_function_results_struct.h  gen_algo.cpp  gen_algo.h  gen_algo.tpp  gen_structure.h  input_structure.h  main.cpp  my_array_encapsulation.h  my_array_encapsulation.tpp  output_structure.h  real_convertor.cpp  real_convertor.h  real_structures.h
python_module/: functions_for_python.cpp  functions_for_python.h  genetic_algorithm_module.cpp
